set dialogs and centent box

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="CSS/index.css" />
     <link rel="stylesheet" href="CSS/curtain_animation.css" />
     <link rel="stylesheet" href="CSS/dialog.css" />
+    <link rel="stylesheet" href="CSS/content.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -31,15 +32,18 @@
       </div>
 
       <div class="main">
+        <div class="content">
+
+        </div>
         <div class="dialogContainer">
             <div class="dialogBox">
               <label for="" style="font-weight: bold; font-size: 1rem"
                 >Cartoon :
               </label>
               <textarea id="dialog" disabled></textarea>
-              <span class="tip"> click to continuse</span>
-            </div>
-            <div class="char"></div>
+              <span class="tip"> Click here to continues</span>
+              <div class="char"></div>
+            </div>            
           </div>
       </div>
 
