--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="CSS/curtain_animation.css" />
     <link rel="stylesheet" href="CSS/dialog.css" />
     <link rel="stylesheet" href="CSS/content.css">
+    <link rel="stylesheet" href="CSS/state.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -18,7 +19,7 @@
   </head>
   <body>
     <main class="Main_container">
-      <div id="curtain">
+      <!-- <div id="curtain">
         <div class="left"></div>
         <div class="right"></div>
 
@@ -29,11 +30,10 @@
           </div>
           <button class="btn" onclick="showTime();">Move Boxes</button>
         </div>
-      </div>
+      </div> -->
 
       <div class="main">
         <div class="content">
-
         </div>
         <div class="dialogContainer">
             <div class="dialogBox">
@@ -55,5 +55,8 @@
     <script src="JS/index.js"></script>
     <script type="module" src="JS/dialog.js"></script>
     <script type="module" src="JS/games.js"></script>
+    <script type="module" src="JS/state.js"></script>
+    <script src="JS/gameSub.js"></script>
+
   </body>
 </html>
